need to commit more often

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -76,10 +76,43 @@
 	padding: 5px;
 }
 
-.summarize {
+x-annotate {
+	position:relative;
 	background-color: lightgrey;
 	cursor:pointer;
 }
 
-.summarize:hover {
+x-annotate:hover {
+}
+
+.summary_error {
+	text-align:center;
+	width:100%;
+	font-size:1.25em;
+}
+
+.summary {
+	cursor:default;
+	background-color:white;
+	height:200px;
+	padding:5px;
+	overflow-y: scroll;
+	border:1px solid black;
+}
+
+.loader {
+	margin-left:auto;
+	margin-right:auto;
+	vertical-align: middle;
+	border: 5px solid #f3f3f3; /* Light grey */
+	border-top: 5px solid #3498db; /* Blue */
+	border-radius: 50%;
+	width: 20px;
+	height: 20px;
+	animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
