--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
 		<script src="/static/js/newsbin.js"></script>
 		<script>
 			//Globals:
+			var current = null;
 
 			// we add an event listener to watch the scroll event
 			// and calculate the distance from the top. If the distance
@@ -86,6 +87,7 @@
 
 			function fetch_article( id ){
 				var article = new Article( id );
+				current = article;
 			}
 
 			// setAll
