--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>newsbin</title>
-		<link rel="stylesheet" type="text/css" href="/static/css/newsbin.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/newsbin.min.css" />
 	</head>
 	<body>
 
@@ -89,6 +89,6 @@
 
 		</div>
 
-		<script src="/static/js/newsbin.js"></script>
+		<script src="/static/js/newsbin.min.js"></script>
 	</body>
 </html>
