--- a/site/templates/about.html
+++ b/site/templates/about.html
@@ -26,7 +26,7 @@
 				- blackstampede
 			</p>
 			<div id="footer">
-				<div class="footer_block">
+				<div id="footer_block">
 					<a href="http://www.python.org" target="_blank" ><img src="/static/img/python.png" /></a>
 					<a href="http://flask.pocoo.org/" target="_blank" ><img src="/static/img/flask.png" /></a>
 					<a href="https://github.com/" target="_blank" ><img src="/static/img/github.jpg" /></a>
